<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/glutenBackground"
    tools:context=".RestaurantInfoActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/restaurantInfoBackButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_rounded"
            android:fontFamily="sans-serif"
            android:text="@string/back"
            android:textColor="@color/glutenBackground"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/restaurantInfoDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/restaurant_info_disclaimer"
            android:textSize="12sp"
            android:textColor="@color/glutenPrimaryDark"
            android:fontFamily="sans-serif"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/restaurantInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/more_information"
        android:textColor="@color/glutenPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/restaurantInfoFeaturesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:gravity="start"
        android:paddingBottom="10dp"
        android:text="@string/restaurant_info_features_text"
        android:textSize="18sp"
        android:textColor="@color/glutenPrimaryDark"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>

    <ListView
        android:id="@+id/restaurantInfoFeaturesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:focusable="false"
        android:scrollbars="none"/>

    <TextView
        android:id="@+id/restaurantInfoTimesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/restaurant_info_times_text"
        android:textSize="18sp"
        android:textColor="@color/glutenPrimaryDark"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>

    <ListView
        android:id="@+id/restaurantInfoTimesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:focusable="false"
        android:scrollbars="none"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/glutenPrimary"
            android:paddingTop="16dp"
            android:paddingBottom="19dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/showRestaurantFooterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:paddingTop="1dp"
                android:text="@string/author_name"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/showRestaurantFooterUni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:paddingTop="1dp"
                android:text="@string/author_university"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/showRestaurantFooterID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:paddingTop="1dp"
                android:paddingEnd="10dp"
                android:text="@string/author_id"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
