<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/glutenBackground"
    tools:context=".ShowRestaurantsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/showRestaurantsBackButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_rounded"
            android:fontFamily="sans-serif"
            android:text="@string/back"
            android:textColor="@color/glutenBackground"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/showRestaurantsFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="7dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_rounded"
            android:fontFamily="sans-serif"
            android:layout_gravity="end"
            android:text="@string/filter"
            android:textColor="@color/glutenBackground"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/showRestaurantTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/show_restaurants_activity_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/glutenPrimaryDark"
        android:fontFamily="sans-serif"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="575dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:scrollbarSize="6dp"
        android:scrollbarStyle="outsideInset"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/glutenPrimary"
        android:paddingTop="16dp"
        android:paddingBottom="19dp">

        <TextView
            android:id="@+id/showRestaurantFooterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:paddingTop="1dp"
            android:text="@string/author_name"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/showRestaurantFooterUni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:paddingTop="1dp"
            android:text="@string/author_university"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/showRestaurantFooterID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="1dp"
            android:paddingEnd="10dp"
            android:text="@string/author_id"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"/>

    </RelativeLayout>

</LinearLayout>